a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/wrongCondition1.min
#wrong condition1
var x : string;
x = "STRINGBOY2000";
if x then
    x = x + "000";
endif

